<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:text="@string/spinner_textview_range"/>
        <Spinner
            android:id="@+id/spinner_date_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/date_filter_array"
            android:minWidth="180dp"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:text="@string/spinner_textview_order"/>
        <Spinner
            android:id="@+id/spinner_sort_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/sort_order_array"
            android:minWidth="180dp">
        </Spinner>
    </LinearLayout>


    <Switch
        android:id="@+id/switch_topic_arts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/switch_topic_arts" />

    <Switch
        android:id="@+id/switch_topic_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/switch_topic_education"/>

    <Switch
        android:id="@+id/switch_topic_sports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/switch_topic_sports"/>


</LinearLayout>